backend/k8s/manifests/base/apps/streamlit/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: frontend
spec:
  rules:
    - host: streamlit.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-svc
                port:
                  number: 80
